Bug 117046 - HSQLDB MIGRATION Error message box text is not wrapped and becomes unreadable (not gtk3)
Summary: HSQLDB MIGRATION Error message box text is not wrapped and becomes unreadable...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-16 17:17 UTC by Drew Jensen
Modified: 2018-04-18 22:05 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
message box with unreadable text (23.49 KB, image/png)
2018-04-16 17:17 UTC, Drew Jensen
Details
test ODB (4.88 KB, application/vnd.oasis.opendocument.database)
2018-04-16 17:18 UTC, Drew Jensen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Drew Jensen 2018-04-16 17:17:51 UTC
Created attachment 141402 [details]
message box with unreadable text

TEST SYSTEM: Version: 6.1.0.0.alpha0+
Build ID: 110a9e2604e835fff9fcd6053b1d7e5f92b92e8e
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-04-16_12:05:29
Locale: en-US (en_US.UTF-8); Calc: group

Open the attached hsqldb embedded ODB
Open Tables section.
Dialog prompts for migration to firebird. Select yes.
Migration fails and raises dialog box.
see attached image:

The more info button does let the user see what the actual text is, but it should be legible in the main popup.
Comment 1 Drew Jensen 2018-04-16 17:18:24 UTC
Created attachment 141403 [details]
test ODB
Comment 2 V Stuart Foote 2018-04-16 18:06:04 UTC
Confirmed the error message does not wrap in the pop-up dialog with migration.

On Windows, the error box can be moved to view the off screen portion, otherwise dialog frame of the error box can not be resized.

On Windows 10 Ent 64-bit en-US with
Version: 6.1.0.0.alpha0+
Build ID: 818619b0f2f7813decb26d0b14362dec76a8ff37
CPU threads: 8; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2018-04-08_13:29:47
Locale: en-US (en_US); Calc: CL
Comment 3 Xisco Faulí 2018-04-17 10:35:15 UTC
I can reproduce it with gen and gtk+ but not with gtk3...

@Caolán, one for you?
Comment 4 Xisco Faulí 2018-04-17 10:37:01 UTC
I would say, this is a UI problem, rather than a Base problem...
Comment 5 Caolán McNamara 2018-04-17 13:22:18 UTC
wrapping point not recalculated if messages set after dialog is created, vs at dialog creation time
Comment 6 Commit Notification 2018-04-18 07:53:24 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=02e5ff1d9b12c12fcaaa929c6dea626eefc5bb8c

Resolves: tdf#117046 messages set after dialog created should affect size

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Drew Jensen 2018-04-18 22:05:17 UTC
chkd w/ 4-18-18 build, that was quick ;)