Resolves: tdf#117046 messages set after dialog created should affect size

Change-Id: I03688ec1d869720b4a042602ff1da15727174592